--- a/index.html
+++ b/index.html
@@ -76,6 +76,28 @@
 						<ul class="fa-ul fa-1x">
 						 <li>
 							 <i class="fa-li fa fa-caret-right"></i>
+							 <papertitle>Auditing f-Differential Privacy in One Run.</papertitle>
+							 <br>
+							 <authors> Mahloujifar, Saeed, Luca Melis, Kamalika Chaudhuri.</authors>
+							 <br>
+							 <conference>In ICML 2025.</conference>
+							 <a class="paperlink" href="https://arxiv.org/abs/2410.22235" target="_blank">[arXiv]</a>
+						 </li>
+						</ul>
+						<ul class="fa-ul fa-1x">
+						 <li>
+							 <i class="fa-li fa fa-caret-right"></i>``
+							 <papertitle>Noisy Neighbors: Efficient membership inference attacks against LLMs.</papertitle>
+							 <br>
+							 <authors> Filippo Galli, Luca Melis, Tommaso Cucinotta.</authors>
+							 <br>
+							 <conference>In PrivateNLP 2024.</conference>
+							 <a class="paperlink" href="https://arxiv.org/abs/2406.16565" target="_blank">[arXiv]</a>
+						 </li>
+						</ul>
+						<ul class="fa-ul fa-1x">
+						 <li>
+							 <i class="fa-li fa fa-caret-right"></i>
 							 <papertitle>Federated Linear Contextual Bandits with User-level Differential Privacy.</papertitle>
 							 <br>
 							 <authors> Ruiquan Huang, Huanyu Zhang, Luca Melis, Milan Shen, Meisam Hejazinia, Jing Yang.</authors>
