--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							 <i class="fa-li fa fa-caret-right"></i>
 							 <papertitle>Auditing f-Differential Privacy in One Run.</papertitle>
 							 <br>
-							 <authors> Mahloujifar, Saeed, Luca Melis, Kamalika Chaudhuri.</authors>
+							 <authors> Mahloujifar Saeed, Luca Melis, Kamalika Chaudhuri.</authors>
 							 <br>
 							 <conference>In ICML 2025.</conference>
 							 <a class="paperlink" href="https://arxiv.org/abs/2410.22235" target="_blank">[arXiv]</a>
@@ -86,11 +86,7 @@
 						</ul>
 						<ul class="fa-ul fa-1x">
 						 <li>
-<<<<<<< HEAD
-							 <i class="fa-li fa fa-caret-right"></i>``
-=======
 							 <i class="fa-li fa fa-caret-right"></i>
->>>>>>> 532d9d0c680f199587266a3b285d9e41df0b5d17
 							 <papertitle>Noisy Neighbors: Efficient membership inference attacks against LLMs.</papertitle>
 							 <br>
 							 <authors> Filippo Galli, Luca Melis, Tommaso Cucinotta.</authors>
